--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "csv-parse": "^5.0.4",
+    "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "mongoose": "^6.3.2",
     "nodemon": "^2.0.15"
