--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -7,16 +7,22 @@ on: # When will the workflow we are defining will execute / run
 jobs: #The jobs that need to be performed when any of the above events occur
   #name of the job
   build:
+    env: #The environment variables that need to be set for the job to run
+      CI: true #This tells the runner that its a CI (neccessary  for some commands which wait for keys to be pressed like watchmode)
+    strategy: #The strategy that the job will use to run the command
+      matrix: #This strategy will run the command for each combination of the given environment variables
+        node-version: [14.x, 16.x]
     #for each job we must specify the os , the job must run on  (the os of the server our backend is running on)
     runs-on: ubuntu-latest # This build job will run on ubuntu-latest os
     steps: # The steps => the tasks that  need to be performed sequentially ( one after another => first the checkout action wil be exeucte , then setup-node ...) when the job is executed
       - uses: actions/checkout@v2 # This step will checkout the code from the repo, (We can use pre-existing actions i.e scripts that are already available in the actions repository, which will be exeucuted)
       #we can even provide a name to the step
-      - name: Use Node js Version 16
+      - name: Use Node js Version ${{matrix.node-version}}
         uses: actions/setup-node@v2 # This step wil execute a pre-existing action, which will setup the node version to 16 on the machine our backend is running on
         with: # We can be specific about the action , with the with property
-          node-version: 16 # We are specifying the node version to be 16
+          node-version: ${{matrix.node-version}} #Using the matrix property we can specify the node version to use (since there can be multiple values for a variable and we want to run the jobs for each combination of variable values)
           #Thus this whole step is , setting up the node version to 16 on the machine our backend is running on
           # we can specify our own scripts we want to run using the run property
       - run: npm install # This step will run the npm install command on the terminal of the machine our backend is running on .
       - run: npm run build --prefix client
+      - run: npm test
